2015-06-04  Per Bothner  <per@bothner.com>

	* PrimType.java (compare): Handle signed vs unsigned types.

2015-06-03  Per Bothner  <per@bothner.com>

	* PrimType.java (numberHierarchy): Add IntFraction.

2015-05-29  Per Bothner  <per@bothner.com>

	* PrimType.java (isUnsigned): New method.
	* CodeAttr.java (fixUnsigned): New method.
	(emitConvert): Change parameter types to PrimType.
	Handle converting to/from unsigned integer types.

2015-05-20  Per Bothner  <per@bothner.com>

	* PrimType.java (numberHierarchy): Add gnu.math.UXxx classes.

	* ClassType.java (getDeclaredMethod): Prefer non-synthetic
	non-bridge methods.

2015-05-15  Per Bothner  <per@bothner.com>

	Optimizations to avoid redundant goto.
	* CodeAttr.java (FIXUP_DEFINE_UNREACHABLE): New kind of fixup.
	(FIXUP_NONE): Remove unneeded fixup kind.
	(fixupSet, fixupEncode, setPreviousLabelHere): New convenience methods.
	(processFixups): Optimize many redundant gotos and transfer-to-goto.
	* Label.java (defineRaw): Add overload to specify fixup-kind.
	* SwitchState.java: Tweaks to stack-types and fixup-chaining.

2015-05-13  Per Bothner  <per@bothner.com>

	* Variable.java (scope): Make private.
	(getScope, setScope): New accessor methods.
	* LocalVarsAttr.java: Update accordingly.
	* Scope.java: Likewise.

2015-05-13  Per Bothner  <per@bothner.com>

	* Label.java (setTypes): Add sanity check.

2015-05-08  Jamison Hope  <jrh@theptrgroup.com>

	* CodeAttr.java (disAssemble): Fix buglet in handling of "ret"
	instruction.

2015-04-16  Per Bothner  <per@bothner.com>

	* CodeAttr.java (emitCatchStart): New overload that takes a type,
	and leaves it to the caller to save/use the exception.

2015-03-30  Per Bothner  <per@bothner.com>

	* ObjectType.java (promote): Remove - we don't want to promote
	nullType to objectType, since the latter is needed for stack-maps.
	* CodeAttr.java (gotoFinallyOrEnd): Revert previous change,
	since above change makes it unnecessary.